--- a/app/views/slideshows/_form.html.haml
+++ b/app/views/slideshows/_form.html.haml
@@ -4,7 +4,8 @@
     =slideshow_form.input :title
     .home-page-input.mb-2
       =label_tag(:homepage_checkbox,  "Make this slideshow the home page slideshow")
-      =check_box_tag(:homepage_checkbox, "yes", false, :"data-homepage-slideshow" => @slideshow.slug == "homepage_slideshow")      
+      =check_box_tag(:homepage_checkbox, "yes", false, :"data-homepage-slideshow" => @slideshow.slug == "homepage_slideshow")
+    =slideshow_form.input :interval, :label => "Speed (interval between slides in milliseconds)"  , :as => :string
     =slideshow_form.input :slug, :as => :hidden
   =render('fields', :slideshow => @slideshow, :form => form)
   =form.buttons do
