--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -5,7 +5,7 @@
     });
       
 =semantic_form_for(@page, :multipart => true) do |form|
-  =tabs('details', 'slideshow', :form => form)
+  =tabs('details', :form => form)
 
   =form.buttons do
     =form.commit_button "Save"
