--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1563,6 +1563,7 @@ a.intro-nav-link-security {
   -webkit-border-radius:3px;
   font-weight: bold;
   margin: 30px 0 0 20px;
+  line-height: 1.2em;
 }
 .header-intro .cta-intro {
   font-weight: bold;
