Show news video thumbnail instead of placeholder

--- a/app/views/pages/views/list.html.haml
+++ b/app/views/pages/views/list.html.haml
@@ -16,7 +16,10 @@
       -@page_children.latest.each do |page|
         .row.mb-2
           .span3.fade_in
-            =link_to(image_for(page, "220x160#"), page)
+            -if page.image_uid.present?
+              =link_to(image_for(page, "220x160#"), page)
+            -else
+              =link_to(image_tag(Page.get_thumbnail_url(page.text), :width => 220, :height => 160), page)
           .span6
             %h3
               =link_to_self(page)
