--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1715,6 +1715,17 @@ a.cta-small {
 
 /*========== preregister modal form ==========*/
 
+
+.modal-bg {
+  background: black;
+  opacity: 0.5;
+  position: fixed;
+  top: 0;
+  bottom:0;
+  left:0;
+  right: 0;
+  z-index: 1000;
+}
 .preregister-form .control-group {
   margin-bottom: 20px;
 }
