--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -41,5 +41,16 @@
           =render_slideshow_by_slug(:homepage_slideshow) if @slideshow
         / =link_to_slug('Find out more', :about, :class=>"illustration-link")
 
+.modal-bg
+#fully-register.modal
+  .modal-header
+    %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"} ×
+    %h3 Welcome back Jon!
+  .modal-body
+    -if current_user.neighbourhood
+      %p
+        You haven't fully registered yet.
+      =link_to "Find out more about registration", '#', :class => "cta-intro not-fully-registered-next"
+
 .container
   =render('home/cycled_columns')
