--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -13,6 +13,7 @@
       NeedsMap.general_offers = #{@general_offers_json};
       #{'NeedsMap.init();' if current_user.try(:fully_registered?)}
       Needs.init();
+      FullyRegister.init();
     });
 
 -if current_user.try(:fully_registered?)
@@ -41,16 +42,17 @@
           =render_slideshow_by_slug(:homepage_slideshow) if @slideshow
         / =link_to_slug('Find out more', :about, :class=>"illustration-link")
 
-.modal-bg
-#fully-register.modal
-  .modal-header
-    %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"} ×
-    %h3 Welcome back Jon!
-  .modal-body
-    -if current_user.neighbourhood
-      %p
-        You haven't fully registered yet.
-      =link_to "Find out more about registration", '#', :class => "cta-intro not-fully-registered-next"
+-if(current_user.try(:role) == 'pre_registration' && session[:seen_preregistered_modal].nil?)
+  .modal-bg
+  #fully-register.modal.hide
+    .modal-header
+      %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"} ×
+      %h3="Welcome back #{current_user}!"
+    .modal-body
+      -if current_user.neighbourhood
+        %p
+          You haven't fully registered yet.
+        =link_to "Find out more about registration", about_pre_registrations_path, :class => "cta-intro not-fully-registered-next"
 
 .container
   =render('home/cycled_columns')
