--- a/app/views/slideshows/_slideshow.html.haml
+++ b/app/views/slideshows/_slideshow.html.haml
@@ -17,7 +17,7 @@
               %img
                 %iframe{:width => 620, :height => 490, :src => slide.video_embed_url, :frameborder => 0, :allowfullscreen => true}
             -else
-              %img{ :alt => '', :src => "#{Settings.site_url}#{slide.image.thumb('620x490#').url}" }
+              %img{ :alt => '', :src => "#{Settings.site_url}#{slide.image.url}" }
             -if slide.caption.present?
               .carousel-caption=slide.caption.html_safe
       %a.left.carousel-control{"data-slide" => "prev", :href => "#slideshow-carousel"} ‹
