View slideshows link on admin page

--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -59,6 +59,7 @@
           CMS
         %ul.unstyled
           %li=link_to "View all pages", pages_path
+          %li=link_to "View all slideshows", slideshows_path
     .span4
       .well
         %h2
