Add links to profiles in user view details modal

--- a/app/views/neighbourhoods/_details_modal.html.haml
+++ b/app/views/neighbourhoods/_details_modal.html.haml
@@ -2,14 +2,14 @@
   %button.close{:type => 'button', :'data-dismiss' => 'modal'} x
 .modal-body
   %h1=resource.is_a?(Need) ? "Need #{resource.id}" : "Offer #{resource.id}"
-  %h2=resource.user.full_name
+  %h2=link_to resource.user.full_name, resource.user
   %p
     %strong Created at
     =resource.created_at
   -if resource.is_a? Offer
     %p
       %strong Person who needed
-      =resource.need.user.full_name
+      =link_to resource.need.user.full_name, resource.user
   %p
     -if resource.is_a? Need or resource.is_a? GeneralOffer
       %strong Description
@@ -31,7 +31,7 @@
         %ul.unstyled
           -resource.offers.each do |offer|
             %li
-              =offer.user.full_name
+              =link_to offer.user.full_name, offer.user
               %strong= "Accepted" if offer.accepted?
     -else
       %p No offers made yet.
@@ -44,7 +44,7 @@
         %ul.unstyled
           -other_offers.each do |offer|
             %li
-              =offer.user.full_name
+              =link_to offer.user.full_name, offer.user
   -elsif resource.is_a? GeneralOffer
     -accepted_offers =  resource.offers.where(:accepted => 1)
 
@@ -54,7 +54,7 @@
         %ul.unstyled
           -accepted_offers.each do |offer|
             %li
-              =offer.need.user.full_name
+              =link_to offer.need.user.full_name, offer.need.user
 
 
 
