--- a/app/views/neighbourhoods/stats.html.haml
+++ b/app/views/neighbourhoods/stats.html.haml
@@ -1,163 +1,1 @@
-%h1=title("Stats for neighbourhood #{@neighbourhood}")
-%h2 Needs Open
--if @needs_open.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th Person In Need
-        %th=sortable "Date/Time"
-        %th Description      
-        %th=sortable "Category"
-        %th Offers made
-        %th Details
-    %tbody
-      -@needs_open.each do |need|
-        %tr
-          %td=link_to need.id, need_path(need)
-          %td=link_to need.user.full_name, user_path(need.user)
-          %td.date-time=need.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(need.description, :length => 50)
-          %td=need.category
-          %td=need.offers.count
-          %td=link_to "View details", "#open-need#{need.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "open-need#{need.id}"}
-          =render('details_modal', :resource => need)
--else
-  %p No needs open.
-%h2 Needs Resolved
--if @needs_resolved.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th=sortable "Person In Need"
-        %th=sortable "Person Who Helped"
-        %th=sortable "Date/Time"
-        %th Description
-        %th=sortable "Category"
-        %th Offers made
-        %th Details
-    %tbody
-      -@needs_resolved.each do |need|
-        %tr
-          %td=link_to need.id, need_path(need)
-          %td=link_to need.user.full_name, user_path(need.user)
-          %td=link_to need.offers.where(:accepted => true).first.user.full_name, user_path(need.offers.where(:accepted => true))
-          %td.date-time=need.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(need.description, :length => 50)
-          %td=need.category
-          %td=need.offers.count
-          %td=link_to "View details", "#resolved-need#{need.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "resolved-need#{need.id}"}
-          =render('details_modal', :resource => need)
--else
-  %p No needs resolved.
-%h2 Needs Removed
--if @needs_removed.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th=sortable "Person In Need"
-        %th=sortable "Date/Time"
-        %th Description      
-        %th=sortable "Category"
-        %th Offers made
-        %th=sortable "Resolved"
-        %th Details
-    %tbody
-      -@needs_removed.each do |need|
-        %tr
-          %td=link_to need.id, need_path(need)
-          %td=link_to need.user.full_name, user_path(need.user)
-          %td.date-time=need.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(need.description, :length => 50)
-          %td=need.category
-          %td=need.offers.count
-          %td=need.offers.count > 0 ? need.has_accepted_offer? : "-"
-          %td=link_to "View details", "#removed-need#{need.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "removed-need#{need.id}"}
-          =render('details_modal', :resource => need)
--else
-  %p No removed needs.
-%h2 Offers Open
--if @offers_open.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th=sortable "Person Who offered"
-        %th=sortable "Person Who needed"
-        %th=sortable "Date/Time"
-        %th Need request description
-        %th=sortable 'Need category'
-        %th Details
-    %tbody
-      -@offers_open.each do |offer|
-        %tr
-          %td=link_to offer.id, need_path(offer.need)
-          %td=link_to offer.user.full_name, user_path(offer.user)
-          %td=link_to offer.need.user.full_name, user_path(offer.need.user)
-          %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(offer.need.description, :length => 50)
-          %td=offer.category
-          %td=link_to "View details", "#open-offer#{offer.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "open-offer#{offer.id}"}
-          =render('details_modal', :resource => offer)
--else
-  %p No offers open.
-%h2 Offers Accepted
--if @offers_accepted.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th=sortable "Person Who Offered"
-        %th=sortable "Person Who Needed"
-        %th=sortable "Date/Time"
-        %th Need request description
-        %th=sortable 'Need category'
-        %th Details
-    %tbody
-      -@offers_accepted.each do |offer|
-        %tr
-          %td=link_to offer.id, need_path(offer.need)
-          %td=link_to offer.user.full_name, user_path(offer.user)
-          %td=link_to offer.need.user.full_name, user_path(offer.need.user)
-          %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(offer.need.description, :length => 50)
-          %td=offer.category
-          %td=link_to "View details", "#accepted-offer#{offer.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "accepted-offer#{offer.id}"}
-          =render('details_modal', :resource => offer)
--else
-  %p No offers accepted.
-%h2 Offers Removed
--if @offers_removed.present?
-  %table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th ID
-        %th=sortable "Person Who Offered"
-        %th=sortable "Person Who Needed"
-        %th=sortable "Date/Time"
-        %th Need request description            
-        %th=sortable "Accepted"
-        %th=sortable 'Need category'
-        %th Details
-    %tbody
-      -@offers_removed.each do |offer|
-        %tr
-          %td=link_to offer.id, need_path(offer.need)
-          %td=link_to offer.user.full_name, user_path(offer.user)
-          %td=link_to offer.need.user.full_name, user_path(offer.need.user)
-          %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
-          %td=read_more_truncate(offer.need.description, :length => 50)
-          %td=offer.accepted? ? 'Yes' : 'No'
-          %td=offer.category
-          %td=link_to "View details", "#removed-offer#{offer.id}", :'data-toggle'=>"modal"
-        .modal.hide.fade{:id => "removed-offer#{offer.id}"}
-          =render('details_modal', :resource => offer)
--else
-  %p No offers removed.
+=render('table')
