--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -10,13 +10,6 @@
       =form_tag(search_users_path, :method => :get, :class => 'pull-right form form-inline form-user-search form-search') do
         =text_field_tag :q, params[:q], :placeholder => "Search users", :class => 'input-medium'
         =submit_tag "Go", :class => 'btn'
-      -unless action_name.search?
-        =link_to(users_path({:format => 'xls', :deleted => false}), :class => 'btn btn-primary pull-right mr-1 btn-download-spreadsheet') do
-          %i.icon-download-alt
-          Download users
-        =link_to(users_path(:format => 'xls', :deleted => true), :class => 'btn btn-primary pull-right mr-1 btn-download-spreadsheet') do
-          %i.icon-download-alt
-          Download deleted users
 
 .users-table.ml-3.mr-3
   %ul.nav.nav-tabs.nav-tabs-users
@@ -29,6 +22,10 @@
       -name = name.downcase.gsub(' ', '-')
       .tab-pane.fade.in{:id => "#{name}", :class => "#{params[:tab] == name || (params[:tab].nil? && name == "unvalidated" && !params[:q].present?) || params[:q].present? && users.present? && active_set == false ? 'active' : ''}"}
         -if users.size > 0
+          -unless action_name.search?
+            =link_to(users_path({:format => 'xls', :users => name}), :class => 'btn btn-primary pull-right mr-1 mb-1 btn-download-spreadsheet') do
+              %i.icon-download-alt
+              ="Download #{name.gsub('-', ' ').split(' ').collect(&:capitalize).join(' ')} Users"
           =render('table', :users => users, :tab => name)
           -active_set = true
         -else
