--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1147,6 +1147,11 @@ a.yoomee-logo {
 .request-message-text {
 	color: #888;
 }
+.needs-description {
+  color: #000;
+  font-weight: normal;
+}
+
 /*========== request page ==========*/
 #request-activity {
 	padding-top: 40px;
