--- a/app/views/needs/user_index.html.haml
+++ b/app/views/needs/user_index.html.haml
@@ -1,6 +1,8 @@
 .row
   .span8.offset2
-    %h1=title "My requests"
+    %h1
+      =title "My requests"
+      %small (These conversations are NOT visible to the public)
     -if @needs.count > 0
       %p
         -if current_user.validated?
@@ -9,14 +11,28 @@
           to see if you could help someone else.
         -else
           You will be able to see who is offering help as soon as you're validated.
+      %h3 Open requests
       %ul.nav.nav-tabs.nav-stacked
-        -@needs.order('created_at DESC').each do |need|
+        -@needs.order('created_at DESC').reject{ |i| i.has_accepted_offer? }.sort_by{|i| -current_user.new_notification_count("my_requests", i)}.each do |need|
           %li
             =link_to need do
               .list-image
                 =image_for_with_validation(need.user, "60x50#")
                 %p.small-text=need.user
               %h3=need.title
+              %h5.needs-description=truncate(need.description, :length =>95)
+              %p
+                =messages_badge(current_user.new_notification_count("my_requests", need))
+      %h3 Accepted requests
+      %ul.nav.nav-tabs.nav-stacked
+        -@needs.order('created_at DESC').select{ |i| i.has_accepted_offer? }.each do |need|
+          %li
+            =link_to need do
+              .list-image
+                =image_for_with_validation(need.user, "60x50#")
+                %p.small-text=need.user
+              %h3=need.title
+              %h5.needs-description=truncate(need.description, :length =>95)
               %p
                 =messages_badge(current_user.new_notification_count("my_requests", need))
       .row
@@ -31,4 +47,3 @@
             =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
           -else
             =link_to "I'd like some help", '#', :class=>"btn call-to-action primary not-fully-registered-link", :data => {:return_to => new_need_path}
-
