Include an 'All' option in the neighbourhood dropdown when creating a new page

--- a/app/views/pages/tabs/_details.html.haml
+++ b/app/views/pages/tabs/_details.html.haml
@@ -4,7 +4,7 @@
     =form.input :parent_id, :as => :hidden, :value => (@page.parent_id || Page.find_by_slug(:news).id)
   -else
     =parent_page_select(form)
-    =form.input :neighbourhood
+    =form.input :neighbourhood, :include_blank => "All"
   =form.input :title
   =form.input :short_title
   .control-group
