When a vimeo video is played in a slideshow the carousel is paused

--- a/app/views/slideshows/_slideshow.html.haml
+++ b/app/views/slideshows/_slideshow.html.haml
@@ -1,7 +1,7 @@
 =content_for(:head) do
   :javascript
     $(document).ready(function() {
-      YmCms.Slideshow.init();
+      YmCms.Slideshow.init({interval: 5000, pause: false});
     });
 
 .row
@@ -15,7 +15,7 @@
           .item{ :class => index == 0 ? 'active' : '' }
             -if slide.has_video?
               %img
-                %iframe{:width => 620, :height => 490, :src => slide.video_embed_url, :frameborder => 0, :allowfullscreen => true}
+                %iframe{:width => 620, :height => 490, :src => "#{slide.video_embed_url}?api=1", :frameborder => 0, :allowfullscreen => true}
             -else
               %img{ :alt => '', :src => "#{Settings.site_url}#{slide.image.url}" }
             -if slide.caption.present? && !slide.has_video?
