Allow the destroying of already deleted general offers

--- a/app/views/neighbourhoods/all_stats.html.haml
+++ b/app/views/neighbourhoods/all_stats.html.haml
@@ -51,6 +51,7 @@
         -else
           %p No general offers.
         %h2 Removed General Offers
+        -if @removed_general_offers.present?
           %table.table.table-striped.table-condensed
             %thead
               %tr
@@ -74,6 +75,6 @@
                   =render('details_modal', :resource => offer)
         -else
           %p No removed general offers.
-        .deletion-buttons
-          =link_to 'Destroy selected general offers', '#', :class => 'btn btn-destroy-general-offers btn-danger pull-right ml-1'
-          =link_to 'Delete selected general offers', '#', :class => 'btn btn-delete-general-offers btn-warning pull-right'
+          .deletion-buttons
+            =link_to 'Destroy selected general offers', '#', :class => 'btn btn-destroy-general-offers btn-danger pull-right ml-1'
+            =link_to 'Delete selected general offers', '#', :class => 'btn btn-delete-general-offers btn-warning pull-right'
