--- a/app/views/neighbourhoods/all_stats.html.haml
+++ b/app/views/neighbourhoods/all_stats.html.haml
@@ -32,6 +32,7 @@
               %tr
                 %th ID
                 %th=sortable "Person Who Offered"
+                %th=sortable "Postcode"
                 %th=sortable "Date/Time"
                 %th Description
                 %th=sortable "Category"
@@ -41,6 +42,7 @@
                 %tr
                   %td=link_to offer.id, general_offer_path(offer.id)
                   %td=link_to offer.user.full_name, user_path(offer.user)
+                  %td=offer.postcode
                   %td.date-time=offer.created_at.strftime("%d %b %y %H:%M")
                   %td=read_more_truncate(offer.description, :length => 50)
                   %td=offer.category
@@ -57,6 +59,7 @@
               %tr
                 %th ID
                 %th=sortable "Person Who Offered"
+                %th=sortable "Postcode"
                 %th=sortable "Removed At"
                 %th Description
                 %th=sortable "Category"
@@ -66,6 +69,7 @@
                 %tr
                   %td=link_to offer.id, general_offer_path(offer.id)
                   %td=link_to offer.user.full_name, user_path(offer.user)
+                  %td=offer.postcode
                   %td.date-time=offer.removed_at.strftime("%d %b %y %H:%M")
                   %td=read_more_truncate(offer.description, :length => 50)
                   %td=offer.category
