Small styling change on stats

--- a/app/views/neighbourhoods/all_stats.html.haml
+++ b/app/views/neighbourhoods/all_stats.html.haml
@@ -31,7 +31,7 @@
               %br
               general offers
           .span2.offer-count-2
-            %p
+            %p.small-text
               %span.huge-offer-count=GeneralOffer.joins(:offers).count
               %br
               accepted general offers
