--- a/app/views/general_offers/show.html.haml
+++ b/app/views/general_offers/show.html.haml
@@ -30,7 +30,7 @@
       -else
         =@general_offer.category.description
       .mt1
-        -if @general_offer.user.validated?
+        -if @general_offer.user.try(:validated?)
           -if current_user.validated?
             =link_to("Accept #{@general_offer.user}'s offer", accept_general_offer_path(@general_offer), :method => :post, :class => 'btn btn-primary') unless current_user == @general_offer.user
           -elsif current_user.pre_registration? || current_user.group_user?
