Bio copy change

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -58,7 +58,7 @@
       %h3.block.profile-title.profile-title-private
         These details are private
         %br
-        %small The details below will not be shared with anyone.
+        %small The details below will not be shared with other users.
     -if current_user == @user
       .profile-details.profile-details-private
         .mb1
